fix : add DATA_PROVIDER  in .env.example

--- a/backend/nodejs/.env.example
+++ b/backend/nodejs/.env.example
@@ -2,3 +2,13 @@
 PORT = 6666
 # 域名白名单
 ALLOWED_ORIGINS=http://localhost:5173,http://127.0.0.1:5173
+
+# data provider: memory | mysql
+DATA_PROVIDER=memory
+
+# db (only required when DATA_PROVIDER=mysql)
+DB_HOST=localhost
+DB_PORT=3306
+DB_USER=root
+DB_PASSWORD=your_password
+DB_NAME=node_js
